--- a/Part2/US_DebtAdjustment/2008_top.ipynb
+++ b/Part2/US_DebtAdjustment/2008_top.ipynb
@@ -4,33 +4,132 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Top: 2007\n",
-    "--- \n",
-    "\n",
-    "## Overall Market and Economy Doing Well\n",
+    "# **The Top: 2007**\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overall Market and Economy Doing Well\n",
+    "---\n",
     "- Markets flat in February + March with low volatility and priced to maintain it\n",
-    "## Problems with Subprime Mortgages\n",
-    "- Investment banks packaging and securitizing assets for sale. (CDOs, synthetic CDOs, CMOs, etc.)\n",
-    "    - rating best slice AAA, the next slice AA, ....\n",
-    "    - AAA-rated bond yielding slightly higher than other AAA bonds\n",
-    "    - Hedge funds taking bottom slice offering leverage and volatility \n",
-    "    - Offered credit to risky borrowers \n",
-    "- Lowered lending standards led to an uptick in delinquencies \n",
-    "    - banks stoped buying loans \n",
-    "    - originators stuck with losses \n",
+    "- Volatility + Market\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problems with Subprime Mortgages\n",
+    "---\n",
+    "- CDOs, sythetic CDOs, CMOs + Ratings \n",
+    "- Lowered Lending Standards \n",
+    "- Uptick in Delinquencies \n",
+    "- Banks Stopped Buying Loans (Originators Stuck with Losses)\n",
     "> #### \"Early Payment Defaults\"\n",
     "> - Provision within agreement with investment bank buying subprime loan\n",
     "> - If borrower misses one of the first few payments -> lender must buy back the loan \n",
-    ">   - Typically very rare for the borrower to miss a payment \n",
-    "\n",
-    "- New Century: 2nd Largest Subprime Lender in 2006 \n",
-    "    - 2.5% of borrowers failed to make initial payments \n",
-    "    - did not have cash to cover buy-backs \n",
-    "    - **filed for bankruptcy in April 2007**\n",
-    "\n",
-    "## Markets Rally Through April and May\n",
-    "#### Hitting New Records \n",
-    "\n"
+    ">   - Typically very rare for the borrower to miss a payment \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Markets Rally Through April and May\n",
+    "---\n",
+    "- Hitting New Records "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Yield Curve Flattens June/July \n",
+    "---\n",
+    "> \n",
+    "> - Interest Rates **Rise** \n",
+    ">   - Debt Service Payments **Rise**\n",
+    ">       - Additional Borrowing **Falls**\n",
+    ">           - Disposable Income **Falls**\n",
+    ">               - Spending **Falls**\n",
+    ">                   - Income **Falls**\n",
+    ">                       - Economic Activity **Falls**\n",
+    ">\n",
+    ">\n",
+    "> - Short-Term Interest Rates **Rise**\n",
+    ">   - Yield Curve **Flattens/Inverts**\n",
+    ">       - Liquidity **Falls**\n",
+    ">           - ST Asset Returns **Increase** (Cash)\n",
+    ">               - *more attractive to hold VS. long-term financial assets and lower credit rating assets*\n",
+    ">               - ***Money Moves Out of Financial Assets***\n",
+    ">                   - Financial Asset Prices **Fall**\n",
+    ">                       - **Negative Wealth Effect**\n",
+    ">                           - Spending + Income **Fall**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tightening Popped the Bubble \n",
+    "---\n",
+    "- IR rise \n",
+    "- ARM payments increase \n",
+    "- Increasing foreclosures + delinquencies "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bear Stearns: Trouble Begins Mid-June 2007 \n",
+    "--- \n",
+    "- Selling of MBS "
    ]
   },
   {
