2008 summer top dates + notes

--- a/Part2/US_DebtAdjustment/2008_top.ipynb
+++ b/Part2/US_DebtAdjustment/2008_top.ipynb
@@ -5,7 +5,12 @@
    "metadata": {},
    "source": [
     "# **The Top: 2007**\n",
-    "---"
+    "---\n",
+    "- MARCH\n",
+    "    - DJIA best three days since '04\n",
+    "    - Chinese Market Rally \n",
+    "    - Home Sales Most in 3yr\n",
+    "    - Summer `07 FLAT YIELD CURVE  "
    ]
   },
   {
@@ -131,6 +136,70 @@
     "--- \n",
     "- Selling of MBS "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Top: Summer 2007 \n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New Home Sales\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Financial Equity Index\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
