--- a/Part2/US_DebtAdjustment/2008_bubble.ipynb
+++ b/Part2/US_DebtAdjustment/2008_bubble.ipynb
@@ -184,19 +184,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Housing Market Debt Bubble\n",
-    "--- \n",
-    "# Housing Bubble PLOTS \n",
-    "- Home prices from 2004-2006 and 2000-2006\n",
-    "    - plus mortgage data \n",
-    "    - Total Home Sales\n",
-    "- Total Debt Growth (%GDP Ann)\n",
-    "     - Household Debt Growth (%Disposable Income Ann)\n",
-    "- Credit Standards Dropping? \n",
-    "- Fed Easy Monetary Policy + Mortgage Rates \n",
-    "- Av.g Loan-to-Value on New Mortgages \n",
-    "- FedFunds vs. Inflation \n",
-    "- Raising IR impact on LT nominal and real IR "
+    "# **Housing Market Debt Bubble**\n",
+    "---"
    ]
   },
   {
@@ -293,6 +282,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Housing Market Debt Bubble\n",
+    "--- \n",
+    "# Housing Bubble PLOTS \n",
+    "- Home prices from 2004-2006 and 2000-2006\n",
+    "    - plus mortgage data \n",
+    "    - Total Home Sales\n",
+    "- Total Debt Growth (%GDP Ann)\n",
+    "     - Household Debt Growth (%Disposable Income Ann)\n",
+    "- Credit Standards Dropping? \n",
+    "- Fed Easy Monetary Policy + Mortgage Rates \n",
+    "- Av.g Loan-to-Value on New Mortgages \n",
+    "- FedFunds vs. Inflation \n",
+    "- Raising IR impact on LT nominal and real IR "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mortgage Data \n",
+    "--- "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -339,14 +355,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Total Debt Growth VS. Household Debt Growth \n",
-    "--- "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -379,7 +387,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Emerging Broader-Based Bubble \n",
+    "# Total Debt Growth VS. Household Debt Growth \n",
+    "--- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Emerging Broader-Based Bubble**\n",
     "---\n",
     "\n",
     "\n",
